# exercise_checker_mcp

./: .envrc  README.md  mcp_config.json  pyproject.toml
src/: INFO_src.txt  README_src.txt
src/exercise_checker_mcp/: classroom_mcp_server.py
src/exercise_checker_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_classroom_mcp_server.py
